--- a/src/sections/about.mdx
+++ b/src/sections/about.mdx
@@ -1,6 +1,6 @@
 # About
 
-##### Hi I'm Mahmoud a self taught software developer with experience building web applications.
+##### Hi I'm Mahmoud a self taught software engineer with experience building web applications.
 
-##### I have a curious mind for knowing more although my focus for now is heavily in both frontend and backend development.
-##### I am interested in DevOps, Blockchain and Smart contract development.
+##### I have a curious mind for knowing more although my focus for now is heavily in Frontend, Backend and DevOps development.
+##### I am interested in Blockchain and Smart contract development.
