new about desc and fixes

--- a/src/sections/about.mdx
+++ b/src/sections/about.mdx
@@ -1,6 +1,9 @@
 # About
 
-##### Hi I'm Mahmoud a self taught software engineer with experience building web applications.
+###### Hello, I am Mahmoud, a self-taught software engineer with experience building web applications. My current job responsibilities encompass a wide range of skills, including Frontend, Backend, DevOps, and network development. While these responsibilities keep me grounded in the technical aspects of software engineering, my interests extend far beyond these areas. I am also fascinated by the intricacies of Philosophy, Psychology, Sociology, and any book I get my hands on, which imbue my work with a broader perspective.
 
-##### I have a curious mind for knowing more although my focus for now is heavily in Frontend, Backend and DevOps development.
-##### I am interested in Blockchain and Smart contract development.
+###### In my work, I am drawn to both the logical and visual aspects of software development. On one hand, I enjoy the analytical and mathematical nature of Backend development, which requires careful planning and the application of logical principles. On the other hand, Frontend development appeals to my artistic side, as it offers the chance to create visually stunning interfaces that engage and delight users. The DevOps and network areas are particularly interesting to me as they require a deep understanding of infrastructure, networking, and security principles, all of which are vital to creating robust and scalable applications. I find the process of blending these elements into a cohesive whole to be a thrilling and rewarding challenge.
+
+###### Beyond my work, I am passionate about expanding my knowledge in the field of machine learning and AI, as I see tremendous potential for these technologies to transform our world and bring about positive change. As someone with a background in psychology, I'm particularly interested in exploring the intersection of human behavior and artificial intelligence, and how we can design intelligent systems that are both effective and ethical. I'm also intrigued by the rapidly evolving realm of Blockchain and Smart contract development, as it presents exciting opportunities for innovation and disruption in various industries. Keeping myself updated with the latest trends in this area is an essential part of my learning journey.
+
+###### In summary, I am a passionate and multi-faceted software engineer, with a strong foundation in both the logical and creative sides of web development. My interests extend beyond my current responsibilities, and I am continually exploring new fields of knowledge. I am committed to using my skills to create innovative solutions that improve people's lives, and I look forward to the challenges and opportunities that lie ahead.
