--- a/src/sections/intro.mdx
+++ b/src/sections/intro.mdx
@@ -1,3 +1,1 @@
-## Hello, I'm Mahmoud Amr.
-
-<!-- I'm creating noice web experiences for the next generation of consumer-facing companies -->
+## Endeavoring To Solve A Puzzle.
