--- a/src/sections/contact.mdx
+++ b/src/sections/contact.mdx
@@ -1,3 +1,3 @@
 ## Get in touch
 
-Say <a href = "mailto:mahmoud.mansour.amr.mm@gmail.com">Hi</a> or find me on other platforms: <a href="https://www.linkedin.com/in/mahmoud-amrr/" target='_blank' >Linkedin</a> , <a href="https://www.facebook.com/profile.php?id=100005577886729" target='_blank' >Facebook</a> & <a href="https://twitter.com/mah_amrr" target='_blank' >Twitter</a>
+Say <a href = "mailto:mahmoud.mansour.amr.mm@gmail.com">Hi</a> or find me on other platforms: <a href="https://www.linkedin.com/in/mahmoud-amrr/" target='_blank' >Linkedin</a> & <a href="https://twitter.com/mah_amrr" target='_blank' >Twitter</a>
