Add DevOps icon to stack section and improve code quality
- Add DevOps image to technology stack
- Remove unused code, components, and imports
- Improve TypeScript type safety (remove @ts-ignore, add proper types)
- Optimize resize handlers with debouncing
- Clean up unused exports from animations and space-utils
- Add MDX type declarations
- Fix inconsistent comments

--- a/src/sections/about.mdx
+++ b/src/sections/about.mdx
@@ -1,6 +1,6 @@
 # About
 
-##### In summary, I am a passionate and multi-faceted software engineer, with a strong foundation in both the logical and creative sides of web development. My interests extend beyond my current responsibilities, and I am continually exploring new fields of knowledge. I am committed to using my skills to create innovative solutions that improve people's lives, and I look forward to the challenges and opportunities that lie ahead.
+##### I am a passionate and multi-faceted software engineer, with a strong foundation in both the logical and creative sides of development. My interests extend beyond my current responsibilities, and I am continually exploring new fields of knowledge. I am committed to using my skills to create innovative solutions that improve people's lives, and I look forward to the challenges and opportunities that lie ahead.
 
 
-###### For more details, please check out the full version on my blog <a href="https://blog.mahmoudamr.space/about" target='_blank' >Here</a> 
+###### Check out the full version on my blog <a href="https://blog.mahmoudamr.space/about" target='_blank' >Here</a> 
